--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+asgiref==3.7.2
 Django==3.2.13
-djangorestframework==3.13.1
-PyJWT==2.4.0
 django-cors-headers==3.13.0
-gunicorn==20.1.0
 django-environ==0.8.1
+djangorestframework==3.13.1
+gunicorn==20.1.0
+psycopg2-binary==2.9.6
+PyJWT==2.4.0
+pytz==2023.3
+sqlparse==0.4.4
+typing_extensions==4.7.1
